--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
           <button class="button__primary">Order now</button>
         </div>
       </section>
+
+      <!-- Explore Menu -->
+      <section class="explore__menu__container">
+        <h1 class="explore__menu__text">Explore Our Menu</h1>
+        <div class="explore__menu__lists">
+          <div class="food__menu__card">
+            <img src="./assets/burger.jpg" alt="burger" class="food__image" />
+            <div class="food__menu__card__description">
+              <h3 class="food__title"></h3>
+              <p class="food__restaurants"></p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
